[metadata]
name = APMshell
version = 0.3
author = Venkatesh Mishra
author_email = unkown@unkown.com
description = using a package manager in a unique shell env.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adminlinuxweb/apm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
